--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <section data-anim-wrap class="hero -type-6">
       <div data-anim-child="img-right cover-light-1 delay-2" class="hero__bg rounded-16">
-        <img src="img/hero/6/1.png" alt="image" class="img-ratio">
+        <img src="img/cover2.gif" alt="image" class="img-ratio">
       </div>
 
       <div class="container">
@@ -282,15 +282,7 @@
                 Experience
               </h1>
 
-              <div data-anim-child="slide-up delay-6" class="d-flex justify-center mt-40 md:mt-20">
-                <button class="hero__button d-flex flex-column items-center">
-                  <div class="size-80 flex-center rounded-full bg-accent-1-50 blur-1 border-white-10">
-                    <i class="icon-play text-21 fw-500 text-white"></i>
-                  </div>
 
-                  <div class="text-13 text-white mt-20">PLAY INTRO VIDEO</div>
-                </button>
-              </div>
             </div>
           </div>
         </div>
